core/unpackaged/main/default/objects/Product2/fields/Angle__c.field-meta.xml
<CustomField>
    <fullName>Angle__c</fullName>
    <label>Angle</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>