core/unpackaged/main/default/objects/Product2/fields/Attribute__c.field-meta.xml
<CustomField>
    <fullName>Attribute__c</fullName>
    <label>Attribute</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Angle</fullName>
            </value>
            <value>
                <fullName>Belt Width</fullName>
            </value>
            <value>
                <fullName>Bolt Centers [Conveyor Covers]</fullName>
            </value>
            <value>
                <fullName>CEMA Classification</fullName>
            </value>
            <value>
                <fullName>Diameter [Pulley]</fullName>
            </value>
            <value>
                <fullName>Face Width [Pulley]</fullName>
            </value>
            <value>
                <fullName>Hub Size (This will need cleaned up)</fullName>
            </value>
            <value>
                <fullName>Hub Type</fullName>
            </value>
            <value>
                <fullName>Roll Diameter</fullName>
            </value>
            <value>
                <fullName>Size [TUFs]</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>