core/unpackaged/main/default/objects/Product2/fields/Bearing_Size__c.field-meta.xml
<CustomField>
    <fullName>Bearing_Size__c</fullName>
    <label>Bearing Size</label>
    <precision>11</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>