core/unpackaged/main/default/objects/Product2/fields/Bearing_Style__c.field-meta.xml
<CustomField>
    <fullName>Bearing_Style__c</fullName>
    <label>Bearing Style</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None Active</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>