core/unpackaged/main/default/objects/Product2/fields/Belt_Width__c.field-meta.xml
<CustomField>
    <fullName>Belt_Width__c</fullName>
    <label>Belt Width</label>
    <length>80</length>
    <type>Text</type>
</CustomField>