core/unpackaged/main/default/objects/Product2/fields/Belt_Width_Inches__c.field-meta.xml
<CustomField>
    <fullName>Belt_Width_Inches__c</fullName>
    <description>This Field is used to search filter idler belt width in the PPI Customer Portal</description>
    <inlineHelpText>This Field is used to search filter idler belt width in the PPI Customer Portal</inlineHelpText>
    <label>Belt Width (Inches)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>14</fullName>
            </value>
            <value>
                <fullName>16</fullName>
            </value>
            <value>
                <fullName>18</fullName>
            </value>
            <value>
                <fullName>20</fullName>
            </value>
            <value>
                <fullName>24</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>36</fullName>
            </value>
            <value>
                <fullName>42</fullName>
            </value>
            <value>
                <fullName>48</fullName>
            </value>
            <value>
                <fullName>54</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
            <value>
                <fullName>66</fullName>
            </value>
            <value>
                <fullName>72</fullName>
            </value>
            <value>
                <fullName>78</fullName>
            </value>
            <value>
                <fullName>84</fullName>
            </value>
            <value>
                <fullName>90</fullName>
            </value>
            <value>
                <fullName>96</fullName>
            </value>
            <value>
                <fullName>102</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>