core/unpackaged/main/default/objects/Product2/fields/Benefit_1__c.field-meta.xml
<CustomField>
    <fullName>Benefit_1__c</fullName>
    <label>Benefit 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>