core/unpackaged/main/default/objects/Product2/fields/Benefit_2__c.field-meta.xml
<CustomField>
    <fullName>Benefit_2__c</fullName>
    <label>Benefit 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>