core/unpackaged/main/default/objects/Product2/fields/Benefit_3__c.field-meta.xml
<CustomField>
    <fullName>Benefit_3__c</fullName>
    <label>Benefit 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>