core/unpackaged/main/default/objects/Product2/fields/Bolt_Centers__c.field-meta.xml
<CustomField>
    <fullName>Bolt_Centers__c</fullName>
    <label>Bolt Centers</label>
    <precision>11</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>