core/unpackaged/main/default/objects/Product2/fields/Bolt_Patterns__c.field-meta.xml
<CustomField>
    <fullName>Bolt_Patterns__c</fullName>
    <label>Bolt Patterns</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None active</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>