core/unpackaged/main/default/objects/Product2/fields/Bolt_Spacing__c.field-meta.xml
<CustomField>
    <fullName>Bolt_Spacing__c</fullName>
    <label>Bolt Spacing</label>
    <precision>10</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>