core/unpackaged/main/default/objects/Product2/fields/Bore__c.field-meta.xml
<CustomField>
    <fullName>Bore__c</fullName>
    <label>Bore</label>
    <precision>10</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>