core/unpackaged/main/default/objects/Product2/fields/Bore_Fraction__c.field-meta.xml
<CustomField>
    <fullName>Bore_Fraction__c</fullName>
    <label>Bore Fraction</label>
    <length>10</length>
    <type>Text</type>
</CustomField>