core/unpackaged/main/default/objects/Product2/fields/Bore_Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Bore_Unit_of_Measure__c</fullName>
    <label>Bore Unit of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>