core/unpackaged/main/default/objects/Product2/fields/CEMA_Classification__c.field-meta.xml
<CustomField>
    <fullName>CEMA_Classification__c</fullName>
    <label>CEMA Classification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CEMA B</fullName>
            </value>
            <value>
                <fullName>CEMA C</fullName>
            </value>
            <value>
                <fullName>CEMA D</fullName>
            </value>
            <value>
                <fullName>CEMA E</fullName>
            </value>
            <value>
                <fullName>CEMA F</fullName>
            </value>
            <value>
                <fullName>CEMA B/C/D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>