core/unpackaged/main/default/objects/Product2/fields/Center_Roll_Height__c.field-meta.xml
<CustomField>
    <fullName>Center_Roll_Height__c</fullName>
    <label>Center Roll Height</label>
    <precision>10</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>