core/unpackaged/main/default/objects/Product2/fields/certifiedDrawingThumbnailURL__c.field-meta.xml
<CustomField>
    <fullName>certifiedDrawingThumbnailURL__c</fullName>
    <label>Certified Drawing Thumbnail URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>