core/unpackaged/main/default/objects/Product2/fields/certifiedDrawingURL__c.field-meta.xml
<CustomField>
    <fullName>certifiedDrawingURL__c</fullName>
    <label>Certified Drawing URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>