core/unpackaged/main/default/objects/Product2/fields/Commerce_Search_Tokens__c.field-meta.xml
<CustomField>
    <fullName>Commerce_Search_Tokens__c</fullName>
    <description>Contains additional searchable tokens used in Commerce. This field is auto calculated and should not be overridden manually</description>
    <inlineHelpText>Contains additional searchable tokens used in Commerce. This field is auto calculated and should not be overridden manually</inlineHelpText>
    <label>Commerce Search Tokens</label>
    <length>255</length>
    <type>Text</type>
</CustomField>