core/unpackaged/main/default/objects/Product2/fields/Default_Bushing_Bore__c.field-meta.xml
<CustomField>
    <fullName>Default_Bushing_Bore__c</fullName>
    <label>Default Bushing Bore</label>
    <length>255</length>
    <type>Text</type>
</CustomField>