core/unpackaged/main/default/objects/Product2/fields/Diameter__c.field-meta.xml
<CustomField>
    <fullName>Diameter__c</fullName>
    <label>Diameter</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>