core/unpackaged/main/default/objects/Product2/fields/Drop_Rise_Height__c.field-meta.xml
<CustomField>
    <fullName>Drop_Rise_Height__c</fullName>
    <label>Drop/Rise Height</label>
    <precision>10</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>