core/unpackaged/main/default/objects/Product2/fields/Drum_List_Price__c.field-meta.xml
<CustomField>
    <fullName>Drum_List_Price__c</fullName>
    <description>List price for drum component for Lagged Drums</description>
    <inlineHelpText>List price for drum component for Lagged Drums</inlineHelpText>
    <label>Drum List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>