core/unpackaged/main/default/objects/Product2/fields/Dynamic_Load_Rating__c.field-meta.xml
<CustomField>
    <fullName>Dynamic_Load_Rating__c</fullName>
    <label>Dynamic Load Rating</label>
    <precision>11</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>