core/unpackaged/main/default/objects/Product2/fields/Dynamic_Load_Rising__c.field-meta.xml
<CustomField>
    <fullName>Dynamic_Load_Rising__c</fullName>
    <label>Dynamic Load Rising</label>
    <length>100</length>
    <type>Text</type>
</CustomField>