core/unpackaged/main/default/objects/Product2/fields/external_ID__c.field-meta.xml
<CustomField>
    <fullName>external_ID__c</fullName>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>