core/unpackaged/main/default/objects/Product2/fields/Face_Width__c.field-meta.xml
<CustomField>
    <fullName>Face_Width__c</fullName>
    <label>Face Width</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>