core/unpackaged/main/default/objects/Product2/fields/Footpad_Width__c.field-meta.xml
<CustomField>
    <fullName>Footpad_Width__c</fullName>
    <label>Footpad Width</label>
    <precision>10</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>