core/unpackaged/main/default/objects/Product2/fields/Frame_Angle_Degrees__c.field-meta.xml
<CustomField>
    <fullName>Frame_Angle_Degrees__c</fullName>
    <description>This field is used to search filter frame angle in the PPI Customer Portal</description>
    <inlineHelpText>This field is used to search filter frame angle in the PPI Customer Portal</inlineHelpText>
    <label>Frame Angle (Degrees)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>20</fullName>
            </value>
            <value>
                <fullName>35</fullName>
            </value>
            <value>
                <fullName>45</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>