core/unpackaged/main/default/objects/Product2/fields/Has_Benefits__c.field-meta.xml
<CustomField>
    <fullName>Has_Benefits__c</fullName>
    <formula>NOT(AND(ISBLANK(Benefit_1__c), 
ISBLANK(Benefit_2__c),
ISBLANK(Benefit_3__c),
ISBLANK(Benefit_4__c),
ISBLANK(Benefit_5__c)))</formula>
    <label>Has Benefits</label>
    <type>Checkbox</type>
</CustomField>