core/unpackaged/main/default/objects/Product2/fields/Has_Featured_Products__c.field-meta.xml
<CustomField>
    <fullName>Has_Featured_Products__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox indicating if a product has featured products associated.</description>
    <inlineHelpText>Checkbox indicating if a product has featured products associated.</inlineHelpText>
    <label>Has Featured Products</label>
    <type>Checkbox</type>
</CustomField>