core/unpackaged/main/default/objects/Product2/fields/Housing_Number__c.field-meta.xml
<CustomField>
    <fullName>Housing_Number__c</fullName>
    <label>Housing Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>