core/unpackaged/main/default/objects/Product2/fields/Hub_Series__c.field-meta.xml
<CustomField>
    <fullName>Hub_Series__c</fullName>
    <label>Hub Series</label>
    <length>25</length>
    <type>Text</type>
</CustomField>