core/unpackaged/main/default/objects/Product2/fields/Hub_Size__c.field-meta.xml
<CustomField>
    <fullName>Hub_Size__c</fullName>
    <label>Hub Size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>