core/unpackaged/main/default/objects/Product2/fields/Hub_Type__c.field-meta.xml
<CustomField>
    <fullName>Hub_Type__c</fullName>
    <label>Hub Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>QD</fullName>
            </value>
            <value>
                <fullName>XT</fullName>
            </value>
            <value>
                <fullName>Taperlock</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>