core/unpackaged/main/default/objects/Product2/fields/Idler_Roll_Diameter__c.field-meta.xml
<CustomField>
    <fullName>Idler_Roll_Diameter__c</fullName>
    <description>This Field is used to search filter idler roll diameter in the PPI Customer Portal.</description>
    <inlineHelpText>This Field is used to search filter idler roll diameter in the PPI Customer Portal.</inlineHelpText>
    <label>Idler Roll Diameter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>4.0</fullName>
            </value>
            <value>
                <fullName>5.0</fullName>
            </value>
            <value>
                <fullName>5.5</fullName>
            </value>
            <value>
                <fullName>6.0</fullName>
            </value>
            <value>
                <fullName>6.5</fullName>
            </value>
            <value>
                <fullName>7.0</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>