core/unpackaged/main/default/objects/Product2/fields/Keyway_Type__c.field-meta.xml
<CustomField>
    <fullName>Keyway_Type__c</fullName>
    <label>Keyway Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>