core/unpackaged/main/default/objects/Product2/fields/Lagging_Groove_Pattern__c.field-meta.xml
<CustomField>
    <fullName>Lagging_Groove_Pattern__c</fullName>
    <description>Lagging groove pattern in lagging attached to the pulley.  Integrated from CATSY.</description>
    <inlineHelpText>Lagging groove pattern in lagging attached to the pulley.</inlineHelpText>
    <label>Lagging Groove Pattern</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Plain</fullName>
            </value>
            <value>
                <fullName>Herringbone</fullName>
            </value>
            <value>
                <fullName>Diamond</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>