core/unpackaged/main/default/objects/Product2/fields/Lagging_List_Price__c.field-meta.xml
<CustomField>
    <fullName>Lagging_List_Price__c</fullName>
    <description>List Price for Lagging component only on lagged drums</description>
    <inlineHelpText>List Price for Lagging component only on lagged drums</inlineHelpText>
    <label>Lagging List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>