core/unpackaged/main/default/objects/Product2/fields/Lagging_Thickness__c.field-meta.xml
<CustomField>
    <fullName>Lagging_Thickness__c</fullName>
    <description>Lagging thickness applied to the pulley.  Integrated from CATSY.</description>
    <inlineHelpText>Lagging thickness applied to the pulley.</inlineHelpText>
    <label>Lagging Thickness &amp; Pattern</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1/4" Plain</fullName>
            </value>
            <value>
                <fullName>3/8" Plain</fullName>
            </value>
            <value>
                <fullName>3/8" Herringbone</fullName>
            </value>
            <value>
                <fullName>3/8" Diamond</fullName>
            </value>
            <value>
                <fullName>1/2" Plain</fullName>
            </value>
            <value>
                <fullName>1/2" Herringbone</fullName>
            </value>
            <value>
                <fullName>1/2" Diamond</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>