core/unpackaged/main/default/objects/Product2/fields/Lagging_Type__c.field-meta.xml
<CustomField>
    <fullName>Lagging_Type__c</fullName>
    <description>Type of lagging applied to the pulley.  Comes over in integration to CATSY.</description>
    <inlineHelpText>Type of lagging applied to the pulley.</inlineHelpText>
    <label>Lagging Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>SBR60</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>