core/unpackaged/main/default/objects/Product2/fields/level_1__c.field-meta.xml
<CustomField>
    <fullName>level_1__c</fullName>
    <label>level 1</label>
    <length>80</length>
    <type>Text</type>
</CustomField>