core/unpackaged/main/default/objects/Product2/fields/level_2__c.field-meta.xml
<CustomField>
    <fullName>level_2__c</fullName>
    <label>level 2</label>
    <length>80</length>
    <type>Text</type>
</CustomField>