core/unpackaged/main/default/objects/Product2/fields/level_3__c.field-meta.xml
<CustomField>
    <fullName>level_3__c</fullName>
    <label>level 3</label>
    <length>80</length>
    <type>Text</type>
</CustomField>