core/unpackaged/main/default/objects/Product2/fields/Material__c.field-meta.xml
<CustomField>
    <fullName>Material__c</fullName>
    <label>Material</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>304 Stainless Steel</fullName>
            </value>
            <value>
                <fullName>316 Stainless Steel</fullName>
            </value>
            <value>
                <fullName>Steel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>