core/unpackaged/main/default/objects/Product2/fields/Overall_Height__c.field-meta.xml
<CustomField>
    <fullName>Overall_Height__c</fullName>
    <label>Overall Height</label>
    <precision>11</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>