core/unpackaged/main/default/objects/Product2/fields/Overall_Length__c.field-meta.xml
<CustomField>
    <fullName>Overall_Length__c</fullName>
    <label>Overall Length</label>
    <precision>11</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>