core/unpackaged/main/default/objects/Product2/fields/Overall_Width__c.field-meta.xml
<CustomField>
    <fullName>Overall_Width__c</fullName>
    <label>Overall Width</label>
    <precision>11</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>