core/unpackaged/main/default/objects/Product2/fields/Pretty_Description__c.field-meta.xml
<CustomField>
    <fullName>Pretty_Description__c</fullName>
    <label>Pretty Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>