core/unpackaged/main/default/objects/Product2/fields/Primary_Image_Large_URL__c.field-meta.xml
<CustomField>
    <fullName>Primary_Image_Large_URL__c</fullName>
    <label>Primary Image Large URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>