core/unpackaged/main/default/objects/Product2/fields/Primary_Keyword__c.field-meta.xml
<CustomField>
    <fullName>Primary_Keyword__c</fullName>
    <label>Primary Keyword</label>
    <type>TextArea</type>
</CustomField>