core/unpackaged/main/default/objects/Product2/fields/primaryImageThumbnailURL__c.field-meta.xml
<CustomField>
    <fullName>primaryImageThumbnailURL__c</fullName>
    <label>Primary Image Thumbnail URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>