core/unpackaged/main/default/objects/Product2/fields/Pulley_Diameter_Search_Filter__c.field-meta.xml
<CustomField>
    <fullName>Pulley_Diameter_Search_Filter__c</fullName>
    <description>This field is used to search filter pulley diameter in the PPI Customer Portal</description>
    <inlineHelpText>This field is used to search filter pulley diameter in the PPI Customer Portal</inlineHelpText>
    <label>Pulley Diameter</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>4</fullName>
                <label>04</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>05</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>06</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>07</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>08</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>09</label>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>12</fullName>
            </value>
            <value>
                <fullName>14</fullName>
            </value>
            <value>
                <fullName>16</fullName>
            </value>
            <value>
                <fullName>18</fullName>
            </value>
            <value>
                <fullName>20</fullName>
            </value>
            <value>
                <fullName>24</fullName>
            </value>
            <value>
                <fullName>29</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>32</fullName>
            </value>
            <value>
                <fullName>36</fullName>
            </value>
            <value>
                <fullName>42</fullName>
            </value>
            <value>
                <fullName>48</fullName>
            </value>
            <value>
                <fullName>49</fullName>
            </value>
            <value>
                <fullName>54</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>