core/unpackaged/main/default/objects/Product2/fields/Pulley_Face_Width_Search_Filter__c.field-meta.xml
<CustomField>
    <fullName>Pulley_Face_Width_Search_Filter__c</fullName>
    <description>This field is used to search filter pulley face width in the PPI Customer Portal</description>
    <inlineHelpText>This field is used to search filter pulley face width in the PPI Customer Portal</inlineHelpText>
    <label>Pulley Face Width</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>6</fullName>
                <label>06</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>05</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>08</label>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>12</fullName>
            </value>
            <value>
                <fullName>14</fullName>
            </value>
            <value>
                <fullName>16</fullName>
            </value>
            <value>
                <fullName>18</fullName>
            </value>
            <value>
                <fullName>20</fullName>
            </value>
            <value>
                <fullName>21</fullName>
            </value>
            <value>
                <fullName>22</fullName>
            </value>
            <value>
                <fullName>23</fullName>
            </value>
            <value>
                <fullName>24</fullName>
            </value>
            <value>
                <fullName>26</fullName>
            </value>
            <value>
                <fullName>28</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>32</fullName>
            </value>
            <value>
                <fullName>34</fullName>
            </value>
            <value>
                <fullName>36</fullName>
            </value>
            <value>
                <fullName>38</fullName>
            </value>
            <value>
                <fullName>40</fullName>
            </value>
            <value>
                <fullName>42</fullName>
            </value>
            <value>
                <fullName>44</fullName>
            </value>
            <value>
                <fullName>46</fullName>
            </value>
            <value>
                <fullName>48</fullName>
            </value>
            <value>
                <fullName>50</fullName>
            </value>
            <value>
                <fullName>51</fullName>
            </value>
            <value>
                <fullName>52</fullName>
            </value>
            <value>
                <fullName>54</fullName>
            </value>
            <value>
                <fullName>57</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>