core/unpackaged/main/default/objects/Product2/fields/Pulse_Per_Rev__c.field-meta.xml
<CustomField>
    <fullName>Pulse_Per_Rev__c</fullName>
    <label>Pulse Per Rev</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None Active</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>