core/unpackaged/main/default/objects/Product2/fields/Rod_Diameter__c.field-meta.xml
<CustomField>
    <fullName>Rod_Diameter__c</fullName>
    <label>Rod Diameter</label>
    <precision>10</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>