core/unpackaged/main/default/objects/Product2/fields/Rod_Type__c.field-meta.xml
<CustomField>
    <fullName>Rod_Type__c</fullName>
    <label>Rod Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>