core/unpackaged/main/default/objects/Product2/fields/Roll_Diameter__c.field-meta.xml
<CustomField>
    <fullName>Roll_Diameter__c</fullName>
    <label>Roll Diameter</label>
    <precision>10</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>