core/unpackaged/main/default/objects/Product2/fields/Roll_Length__c.field-meta.xml
<CustomField>
    <fullName>Roll_Length__c</fullName>
    <label>Roll Length</label>
    <precision>11</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>