core/unpackaged/main/default/objects/Product2/fields/Roll_Thickness__c.field-meta.xml
<CustomField>
    <fullName>Roll_Thickness__c</fullName>
    <label>Roll Thickness</label>
    <precision>9</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>