core/unpackaged/main/default/objects/Product2/fields/Search_Boost_Level__c.field-meta.xml
<CustomField>
    <fullName>Search_Boost_Level__c</fullName>
    <description>Specifies boost level that is to be used for ordering when searching for the product using "Best Match" sorting in commerce store</description>
    <formula>IF(
    ISPICKVAL(Hub_Type__c, 'XT'),
    100,
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Specifies boost level that is to be used for ordering when searching for the product using "Best Match" sorting in commerce store</inlineHelpText>
    <label>Search Boost Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>