core/unpackaged/main/default/objects/Product2/fields/sellable_erp__c.field-meta.xml
<CustomField>
    <fullName>sellable_erp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sellable erp</label>
    <type>Checkbox</type>
</CustomField>