core/unpackaged/main/default/objects/Product2/fields/sellable_override__c.field-meta.xml
<CustomField>
    <fullName>sellable_override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sellable Override</label>
    <type>Checkbox</type>
</CustomField>