core/unpackaged/main/default/objects/Product2/fields/Shaft_Diameter__c.field-meta.xml
<CustomField>
    <fullName>Shaft_Diameter__c</fullName>
    <label>Shaft Diameter</label>
    <precision>11</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>