core/unpackaged/main/default/objects/Product2/fields/Size__c.field-meta.xml
<CustomField>
    <fullName>Size__c</fullName>
    <label>Size</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>