core/unpackaged/main/default/objects/Product2/fields/Travel__c.field-meta.xml
<CustomField>
    <fullName>Travel__c</fullName>
    <label>Travel</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>