core/unpackaged/main/default/objects/Product2/fields/Voltage__c.field-meta.xml
<CustomField>
    <fullName>Voltage__c</fullName>
    <label>Voltage</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>