core/unpackaged/main/default/objects/Product2/fields/Wing_Height__c.field-meta.xml
<CustomField>
    <fullName>Wing_Height__c</fullName>
    <label>Wing Height</label>
    <precision>10</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>