core/unpackaged/main/default/objects/Product2/fields/XA_Product_Class__c.field-meta.xml
<CustomField>
    <fullName>XA_Product_Class__c</fullName>
    <label>XA Product Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Conveyor Cover</fullName>
            </value>
            <value>
                <fullName>Craft Lag</fullName>
            </value>
            <value>
                <fullName>Drum</fullName>
            </value>
            <value>
                <fullName>E Bearing</fullName>
            </value>
            <value>
                <fullName>Idler</fullName>
            </value>
            <value>
                <fullName>MD Drum</fullName>
            </value>
            <value>
                <fullName>MD Wing</fullName>
            </value>
            <value>
                <fullName>SAF Bearing</fullName>
            </value>
            <value>
                <fullName>Shaft</fullName>
            </value>
            <value>
                <fullName>Speed Switch</fullName>
            </value>
            <value>
                <fullName>Take-up Frame</fullName>
            </value>
            <value>
                <fullName>Tube</fullName>
            </value>
            <value>
                <fullName>UH Tube</fullName>
            </value>
            <value>
                <fullName>Vulcanized Lagging</fullName>
            </value>
            <value>
                <fullName>Wing</fullName>
            </value>
            <value>
                <fullName>Z HBW</fullName>
            </value>
            <value>
                <fullName>Z CEMA D TE TESA</fullName>
            </value>
            <value>
                <fullName>Fixed Price</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>